--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ colour-runner==0.1.1
 iniconfig==1.0.1
 Jinja2==2.10.3
 MarkupSafe==1.1.1
+mimesis==4.1.3
 more-itertools==8.4.0
 packaging==20.4
 pluggy==0.13.1
@@ -16,10 +17,12 @@ pyparsing==2.4.7
 pyperclip==1.6.5
 pytest==6.0.1
 pytest-rerunfailures==7.0
+python-dateutil==2.8.1
 PyYAML==5.1.2
 randomuser==1.5.1
 selenium==3.141.0
 six==1.15.0
+text-unidecode==1.3
 toml==0.10.1
 urllib3==1.25.10
 webdriver-test-tools==3.2.0
